# Build-with-AI----Hackathon----GDG

./: ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  ORCHESTRATOR_GUIDE.md  QUICK_START.md  README.md  ai_agent.md  autopilot_ai.db  backend_instructions.md  frontend.md  frontend_theme.md  package-lock.json  project_instruction.md  project_summary.md
backend/: main.py  pyproject.toml  pytest.ini
backend/app/: __init__.py  main.py
backend/app/config/: settings.py
backend/app/db/: session.py
backend/app/models/: __init__.py  action.py  commitment.py  integration.py  notification.py
backend/app/providers/: __init__.py  base_provider.py  clickup_provider.py  email_provider.py  google_calendar_provider.py  notion_provider.py  whatsapp_provider.py
backend/app/routes/: __init__.py  ai.py  commitments.py  integrations.py  notifications.py
backend/app/schemas/: __init__.py  action.py  commitment.py  integration.py  notification.py
backend/app/services/: __init__.py  ai_service.py  commitment_service.py  decision_engine.py  orchestration_service.py
backend/tests/: __init__.py  conftest.py  test_e2e_simulation.py  test_providers.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: endpoint.ts  index.ts
frontend/src/components/: ConnectionModal.tsx  IntegrationCard.tsx  NotificationCenter.tsx  app-shell.tsx  commitment-card.tsx  empty-state.tsx  index.ts  insight-panel.tsx  metric-card.tsx  priority-badge.tsx  sidebar-nav.tsx  status-pill.tsx
scripts/: generate_summary_pdf.py
(+22 files in other folders)
