[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.30.0",
	"sqlalchemy>=2.0.0",
	"pydantic>=2.8.0",
	"pydantic-settings>=2.5.0",
	"google-genai>=1.0.0",
	"python-dotenv>=1.0.1",
	"aiohttp>=3.9.0",
]

[project.optional-dependencies]
test = [
	"pytest>=8.0.0",
	"pytest-asyncio>=0.23.0",
	"pytest-cov>=4.1.0",
	"httpx>=0.25.0",
]
dev = [
	"black>=24.0.0",
	"ruff>=0.1.0",
	"mypy>=1.7.0",
]
